--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -7,12 +7,12 @@
           <% @post_images.each do |post_image| %>
           <div class="masonry-block">
             <div class="block block-image v1">
-
               <div class="block-image">
                 <div class="view view-first">
                   <%=link_to post_image_path(post_image.id) do %>
                    <%= attachment_image_tag post_image, :image %>
                   <% end %>
+                  <%= paginate @post_images, class: "paginate" %>
                 </div>
               </div>
 
@@ -29,7 +29,7 @@
                     <%= post_image.user.name %>
                   </li>
                   <li>
-                    <a href="#">23 コメント</a>
+                    <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
                   </li>
                 </ul>
               </div>
